--- a/spring-boot-demo/hello-demo/src/main/resources/application-uat.yml
+++ b/spring-boot-demo/hello-demo/src/main/resources/application-uat.yml
@@ -1,2 +1,6 @@
 server:
   port: 8081
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:9001/eureka/,http://localhost:9002/eureka/
