eureka server demo

--- a/spring-boot-demo/pom.xml
+++ b/spring-boot-demo/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>hello-demo</module>
         <module>eureka-server</module>
+        <module>ribbon-consumer</module>
     </modules>
 
     <parent>
