--- a/spring-boot-demo/hello-demo/src/main/resources/application-dev.yml
+++ b/spring-boot-demo/hello-demo/src/main/resources/application-dev.yml
@@ -3,4 +3,4 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:9001/eureka/,http://localhost:9002/eureka/
+      defaultZone: http://peer1:9001/eureka/,http://peer2:9002/eureka/
