eureka server demo

--- a/spring-boot-demo/hello-demo/src/main/resources/application.yml
+++ b/spring-boot-demo/hello-demo/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: hello-demo
   profiles:
-    active: uat
+    active: dev
 book:
   name: spring cloud 微服务实战
   author: 翟永超
