--- a/spring-boot-demo/eureka-server/src/main/resources/application-peer1.yml
+++ b/spring-boot-demo/eureka-server/src/main/resources/application-peer1.yml
@@ -4,7 +4,7 @@ eureka:
   instance:
     hostname: peer1
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    registerWithEureka: true
+    fetchRegistry: true
     serviceUrl:
       defaultZone: http://peer2:9002/eureka/
