--- a/spring-boot-demo/eureka-server/src/main/resources/application-peer2.yml
+++ b/spring-boot-demo/eureka-server/src/main/resources/application-peer2.yml
@@ -4,7 +4,7 @@ eureka:
   instance:
     hostname: peer2
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    registerWithEureka: true
+    fetchRegistry: true
     serviceUrl:
       defaultZone: http://peer1:9001/eureka/
