eureka server demo

--- a/spring-boot-demo/pom.xml
+++ b/spring-boot-demo/pom.xml
@@ -12,6 +12,7 @@
         <module>hello-demo</module>
         <module>eureka-server</module>
         <module>ribbon-consumer</module>
+        <module>feign-consumer</module>
     </modules>
 
     <parent>
