--- a/spring-boot-demo/feign-consumer/pom.xml
+++ b/spring-boot-demo/feign-consumer/pom.xml
@@ -11,5 +11,19 @@
 
     <artifactId>feign-consumer</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+            <version>1.4.5.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>1.4.5.RELEASE</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
