--- a/spring-boot-demo/feign-consumer/pom.xml
+++ b/spring-boot-demo/feign-consumer/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>spring-cloud-starter-feign</artifactId>
             <version>1.4.5.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.luow.life</groupId>
+            <artifactId>com-conmmon</artifactId>
+            <version>10.1.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
