--- a/spring-boot-demo/pom.xml
+++ b/spring-boot-demo/pom.xml
@@ -13,6 +13,7 @@
         <module>eureka-server</module>
         <module>ribbon-consumer</module>
         <module>feign-consumer</module>
+        <module>com-conmmon</module>
     </modules>
 
     <parent>
