--- a/spring-boot-demo/hello-service-api/pom.xml
+++ b/spring-boot-demo/hello-service-api/pom.xml
@@ -9,7 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>feign-consumer</artifactId>
+    <groupId>com.luow.life</groupId>
+    <artifactId>hello-service-api</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,30 +21,23 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
             <version>1.4.5.RELEASE</version>
         </dependency>
-
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-feign</artifactId>
-            <version>1.4.5.RELEASE</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>maven-lombok-plugin</artifactId>
+            <version>0.9.3.1</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.luow.life</groupId>
-            <artifactId>com-conmmon</artifactId>
-            <version>10.1.5</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.luow.life</groupId>
-            <artifactId>hello-service-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
     </dependencies>
-
 
 </project>
