--- a/spring-boot-demo/pom.xml
+++ b/spring-boot-demo/pom.xml
@@ -14,6 +14,7 @@
         <module>ribbon-consumer</module>
         <module>feign-consumer</module>
         <module>com-conmmon</module>
+        <module>hello-service-api</module>
     </modules>
 
     <parent>
